--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,12 +1,10 @@
-# Read about fixtures at
-# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: Dave Thomas
+  name: MyString
   address: MyText
-  email: dave@example.org
-  pay_type: Check
-
+  email: MyString
+  pay_type: MyString
 
 two:
   name: MyString
